another file to exclude

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -2,6 +2,7 @@ engines:
   checkstyle:
     enabled: true
     config: 'config/checkstyle/checkstyle.xml'
-exclude_paths: [
-  "folder_to_exclude"
+exclude_paths: [ 
+    "folder_to_exclude",
+    "Library.java"
 ]
