--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -2,7 +2,8 @@ engines:
   checkstyle:
     enabled: true
     config: 'config/checkstyle/checkstyle.xml'
-exclude_paths: [ 
-    "folder_to_exclude",
+exclude_paths: [
+    "config/",
+    "folder_to_exclude/",
     "Library.java"
 ]
