--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -2,6 +2,9 @@ engines:
   checkstyle:
     enabled: true
     config: 'config/checkstyle/checkstyle.xml'
+  pmd:
+    enabled: true
+    config: 'config/pmd-rulesets/pmd-rules.xml'
 exclude_paths: [
     "config/",
     "folder_to_exclude/",
