--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,7 +1,8 @@
 engines:
   checkstyle:
     enabled: true
-    config: 'config/checkstyle/checkstyle.xml'
+  pmd:
+    enabled: true
 exclude_paths: [
     "config/",
     "folder_to_exclude/",
